Have to explicitly add java.smartcardio module to module graph in Java 9 and above